# hdk_crud

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: crud.rs  datetime_queries.rs  lib.rs  pagination.rs  retrieval.rs  signals.rs  validation_support.rs  wire_element.rs  wrapped_hash.rs
src/chain_actions/: create_action.rs  delete_action.rs  fetch_action.rs  mod.rs  update_action.rs  utils.rs
src/datetime_queries/: example_mock.rs  fetch_by_day.rs  fetch_by_hour.rs  fetch_by_time.rs  fetch_entries_from_day_to_day.rs  fetch_entries_from_day_to_hour.rs  fetch_entries_from_hour_to_day.rs  fetch_entries_from_hour_to_hour.rs  fetch_in_time_range.rs  fetchers.rs  inputs.rs  mod.rs  original.rs  thing.rs  thing2.rs  utils.rs
src/modify_chain/: do_create.rs  do_delete.rs  do_fetch.rs  do_update.rs  utils.rs
src/retrieval/: fetch_entries.rs  fetch_links.rs  get_latest_for_entry.rs  inputs.rs  mod.rs  retrieval.rs  utils.rs
