[package]
name = "hdk_crud"
description = "A library to help quickly and easily create a consistent set of create-read-update-delete functions for an Entry type in Holochain, complete with signaling options"
version = "0.0.13"
license = "CAL-1.0"
repository = "https://github.com/lightningrodlabs/hdk_crud"
authors = ["Connor Turland <connor@sprillow.com>"]
edition = "2018"

[dependencies]
# hdk = { version = "0.0.102" }
hdk = { git = "https://github.com/Connoropolous/holochain.git", branch = "develop" }
paste = "1.0.5"
serde = "1.0.123"
thiserror = "1"
mockall = "0.9"
# fixt = { version = "0.0.4", optional = true }
fixt = { git = "https://github.com/Connoropolous/holochain.git", branch = "develop", optional = true }

[dev-dependencies]
# holochain_types = "0.0.2"
holochain_types = { git = "https://github.com/Connoropolous/holochain.git", branch = "develop", features = [
  "fixturators"
] }
rand = "0.7"
strum = "0.18.0"
strum_macros = "0.18.0"

[features]
mock = ["hdk/mock", "hdk/test_utils", "fixt"]
test_utils = ["fixt"]
