[package]
name = "hdk_crud"
description = "A library to help quickly and easily create a consistent set of create-read-update-delete functions for an Entry type in Holochain, complete with signaling options"
version = "0.4.1"
license = "CAL-1.0"
repository = "https://github.com/lightningrodlabs/hdk_crud"
authors = ["Connor Turland <connor@sprillow.com>"]
edition = "2018"

[dependencies]
hdk = "0.0.109"
holo_hash = { version = "0.0.8", features = ["encoding"]}
paste = "1.0.5"
serde = "1.0.123"
thiserror = "1"
mockall = "0.9"
fixt = { version = "0.0.6", optional = true }
mockall_double = { version = "0.2.0", optional = true }
chrono = "0.4.19"
assert_matches = "1.5.0"

[dev-dependencies]
rand = "0.7"
strum = "0.18.0"
strum_macros = "0.18.0"
holochain_types = "0.0.9"

[features]
mock = ["hdk/mock", "hdk/test_utils", "fixt", "mockall_double"]
test_utils = ["fixt"]
